--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@
     --site-max-width: 1100px;
 }
 
+b {
+    color: var(--secondary-color);
+}
+
 ul {
     list-style: none;
 }
@@ -489,6 +493,7 @@ header .navbar {
         *                     à 
         *                   32'15"                            */
 }
+
 
 
 
