--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     --secondary-color: #1b89aa;
     --light-pink-color: #f4d5da
     --medium-gray-color: #ccc;
-    --highlighted-color: #bfa351;
+    --highlighted-color: #d2a217;
     /* --highlighted-color: #34342d; */
     --footer-color: rgb(205, 205, 205);
 
@@ -495,6 +495,7 @@ header .navbar {
         *                     à 
         *                   32'15"                            */
 }
+
 
 
 
