--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@
     --site-max-width: 1100px;
 }
 
+.main section[id] {
+    /* Use a margin equal to or greater than the header's height */
+    scroll-margin-top: 100px; 
+}
+
 b {
     font-weight: var(--font-weight-bold);
     color: var(--emphasis-text-color);
@@ -101,7 +106,6 @@ header {
     width: 100%;
     z-index: 5;
     background: var(--background-color);
-    -webkit-transform: translate3d(0, 0, 0);
 }
 
 header .navbar {
@@ -506,4 +510,5 @@ header .navbar {
 
 
 }
+
 
