--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
     --border-radius-circle: 50%;
 
     /* Site max width */
-    --site-max-width: 1100px;
+    --site-max-width: 900px;
 }
 
 b {
@@ -412,7 +412,10 @@ header .navbar {
         /* Rend la bordure circulaire */
         color: var(--button-icon-color);
         /* Rend l'icône noire et visible */
-        transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+        transition:
+            background-color 0.3s ease,
+            color 0.3s ease,
+            border-color 0.3s ease;
     }
 
     .navbar #menu-open-button {
@@ -488,7 +491,9 @@ header .navbar {
         font-size: var(--font-size-l);
         padding: 8px;
         border-radius: var(--border-radius-circle);
-        transition: background-color 0.3s ease, color 0.3s ease;
+        transition:
+            background-color 0.3s ease,
+            color 0.3s ease;
     }
 
     .navbar :where(#menu-close-button, #menu-open-button):hover {
@@ -502,11 +507,3 @@ header .navbar {
         padding: 1rem;
         max-width: 380px;
     }
-
-
-}
-
-
-
-
-
