--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ header .navbar {
 /* Center the content of the contact section */
 #contact .section-content {
     justify-content: center;
+    padding: 10px 0;
 }
 
 .blog-section {
@@ -508,6 +509,7 @@ header .navbar {
         max-width: 380px;
 
     }
+
 
 
 
