--- a/style.css
+++ b/style.css
@@ -478,10 +478,10 @@ header .navbar {
         height: 28px;
     }
 
-    .navbar #menu-open-button i {
+    /* .navbar #menu-open-button i {
         color: ...;
-        /* Une règle qui pourrait être plus spécifique */
-    }
+        Une règle qui pourrait être plus spécifique 
+    }*/
 
     .navbar :where(#menu-close-button, #menu-open-button) {
         /* Style par défaut du bouton, y compris la couleur de l'icône */
