--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     --footer-color: rgb(205, 205, 205);
 
     /* Font size */
+    --font-size-xxs: 0.5rem;
     --font-size-xs: 0.7rem;
     --font-size-s: 0.9rem;
     --font-size-n: 1rem;
@@ -509,6 +510,9 @@ header .navbar {
     .styled-form {
         padding: 1rem;
         max-width: 380px;
+    }
+    .footer-section .footer {
+        font-size: var(--font-size-xxs);
     }
 
 
