--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --footer-color: rgb(205, 205, 205);
 
     /* Font size */
-    --font-size-xxs: 0.5rem;
+    --font-size-xxs: 0.4rem;
     --font-size-xs: 0.7rem;
     --font-size-s: 0.9rem;
     --font-size-n: 1rem;
@@ -514,5 +514,7 @@ header .navbar {
     .footer-section .footer {
         font-size: var(--font-size-xxs);
     }
+}
+
 
 
