--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ header {
     position: fixed;
     z-index: 5;
     background: var(--background-color);
+    max-width: 100%;
 }
 
 header .navbar {
