--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth !important;
     max-width: 100%;
+    outline: 1px solid red !important;
+    box-shadow: inset 0 0 0 1px green !important;
 }
 
 :root {
