--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth !important;
-    max-width: 100%;
     outline: 1px solid red !important;
-    box-shadow: inset 0 0 0 1px green !important;
 }
 
 :root {
@@ -78,12 +76,14 @@ img {
 
 .section-content {
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 20px;
+    max-width: var(--site-max-width);
 }
 
 .blog-content {
     margin: 0 auto;
     padding: 0 20px;
+    max-width: var(--site-max-width);
 }
 
 .section-title {
@@ -105,7 +105,8 @@ img {
 
 /* Navbar Styling*/
 header {
-    position: fixed;
+    position: fixed;
+    width: 100%;
     z-index: 5;
     background: var(--background-color);
 }
@@ -115,7 +116,6 @@ header .navbar {
     padding: 20px;
     align-items: center;
     justify-content: space-between;
-    max-width: 100%;
 }
 
 .navbar .nav-logo .logo-text {
@@ -229,7 +229,6 @@ header .navbar {
     gap: 50px;
     align-items: center;
     justify-content: space-between;
-    max-width: 100%;
 }
 
 .about-section .about-image-wrapper .about-image {
@@ -519,8 +518,3 @@ header .navbar {
         gap: 5px;
     }
 }
-
-
-
-
-
