--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
 /* Navbar Styling*/
 header {
     position: fixed;
-    width: 100%;
+    max-width: 100%;
     z-index: 5;
     background: var(--background-color);
 }
