--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth !important;
     outline: 1px solid red !important;
-    max-width: 100%;
 }
 
 :root {
@@ -133,7 +132,7 @@ header .navbar {
 
 .navbar .nav-menu {
     display: flex;
-    gap: 10px;
+    padding: 20px 20px 10px 20px;
 }
 
 .navbar .nav-menu .nav-link {
