--- a/style.css
+++ b/style.css
@@ -133,6 +133,8 @@ header .navbar {
 .navbar .nav-menu {
     display: flex;
     padding: 20px 20px 10px 20px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .navbar .nav-menu .nav-link {
