--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth !important;
     outline: 1px solid red !important;
+    box-shadow: inset 0 0 0 1px green !important;
 }
 
 :root {
@@ -77,13 +78,11 @@ img {
 .section-content {
     margin: 0 auto;
     padding: 0 20px;
-    max-width: var(--site-max-width);
 }
 
 .blog-content {
     margin: 0 auto;
     padding: 0 20px;
-    max-width: var(--site-max-width);
 }
 
 .section-title {
@@ -106,10 +105,9 @@ img {
 /* Navbar Styling*/
 header {
     position: fixed;
-    width: 100%;
     z-index: 5;
     background: var(--background-color);
-    min-width: 100%;
+    width: 100%;
 }
 
 header .navbar {
@@ -218,7 +216,7 @@ header .navbar {
 
 /* About section styling */
 .about-section {
-    padding: 120px 0 0 0;
+    padding: 80px 0 0 0;
     background: var(--background-color);
 }
 
@@ -242,7 +240,7 @@ header .navbar {
 }
 
 .about-section .about-details .section-title {
-    padding: 0;
+    padding: 10px;
 }
 
 .about-section .about-details {
