--- a/style.css
+++ b/style.css
@@ -78,11 +78,13 @@ img {
 .section-content {
     margin: 0 auto;
     padding: 0 20px;
+    max-width: var(--site-max-width);
 }
 
 .blog-content {
     margin: 0 auto;
     padding: 0 20px;
+    max-width: var(--site-max-width);
 }
 
 .section-title {
@@ -244,7 +246,6 @@ header .navbar {
 }
 
 .about-section .about-details {
-    max-width: 100%;
     text-decoration: none;
 }
 
