--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* Google font */
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -114,9 +119,9 @@ header {
 
 header .navbar {
     display: flex;
+    padding: 10px 20px 10px 20px;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .navbar .nav-logo .logo-text {
