--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header {
 
 header .navbar {
     display: flex;
-    padding: 10px 20px 10px 20px;
+    padding: 20px 20px 10px 20px;
     align-items: center;
     justify-content: space-between;
 }
@@ -138,7 +138,7 @@ header .navbar {
 
 .navbar .nav-menu {
     display: flex;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     align-items: center;
     justify-content: space-between;
 }
