--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ header .navbar {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 60px 0 600px;
+        padding: 50px 0 625px;
         background: var(--button-menu-color);
         transition: left 0.2s ease;
     }
@@ -455,7 +455,7 @@ header .navbar {
     .navbar .nav-menu .nav-link {
         color: var(--button-icon-color);
         display: block;
-        margin-top: 20px;
+        margin-top: 0;
         font-size: var(--font-size-1);
     }
 
