--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ html, body {
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth !important;
-    /*outline: 1px solid red !important;
-    box-shadow: inset 0 0 0 1px green !important;*/
+    outline: 1px solid red !important;
+    box-shadow: inset 0 0 0 1px green !important;
 }
 
 :root {
@@ -224,7 +224,7 @@ header .navbar {
 
 /* About section styling */
 .about-section {
-    padding: 80px 0 0 0;
+    padding: 96px 0 0 0;
     background: var(--background-color);
 }
 
@@ -235,20 +235,20 @@ header .navbar {
 
 .about-section .section-content {
     display: flex;
-    gap: 50px;
+    gap: 99px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .about-section .about-image-wrapper .about-image {
-    width: 340px;
-    height: 340px;
+    width: 440px;
+    height: 440px;
     object-fit: cover;
     border-radius: var(--border-radius-circle);
 }
 
 .about-section .about-details .section-title {
-    padding: 10px;
+    padding: 4px;
 }
 
 .about-section .about-details {
@@ -266,24 +266,14 @@ header .navbar {
     margin-top: 25px;
     padding: 6px 0 14px 0;
     display: flex;
-    flex-direction: column;
-    gap: 6px;
-    justify-content: center;
-    align-items: center;
-}
-
-.about-section .social-link-list {
-    margin-top: 25px;
-    padding: 6px 0 14px 0;
-    display: flex;
     flex-direction: row; /* Modifié */
-    gap: 16px; /* Modifié */
+    gap: 40px; /* Modifié */
     justify-content: center;
     align-items: center;
 }
 
 .about-section .social-link-list .social-link {
-    font-size: var(--font-size-s);
+    font-size: var(--font-size-l);
     color: var(--text-color);
     transition: 0.2s ease;
 }
